# COVID19Py

./: .all-contributorsrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  Country.py  Location.ipynb  Pipfile  README.md  Test jiaheng.ipynb  URL.ipynb  compare.py  covid19.py  getData.py  mirrors.json  requirements.txt  setup.cfg  setup.py  test.py  text.txt
Abstract class/: abstractCoronavirus.py
COVID19Py/: CaseByCountry.py  Concrete.py  DataClass.py  Implementation.py  Location.ipynb  ObjectBuilder.py  OverViewOfCovid19.py  URL.ipynb  __init__.py  abstract.py  adapter.py  analysis.py  base.py  builder_abstract.py  compare.py  covid19.py  covid19singleton.py  covidInterfaces.py  data.py  datafetcher.py  datafetcher_implement.py  fetchdata.py  getData.py  implementation.py  info.py  interfaces.py  location.ipynb  location.py  network.py  oberver.py  observer.py  overview.py  publisher.py  requestdata.py  singleton.py  singletontest.py  source.py  sources.py  subscriber.py  test.py  (+4 more)
examples/: latest.py
