[metadata]
name = COVID19Py

author = Konstantinos Kamaropoulos
author_email = k@kamaropoulos.com

version = 0.3.0

description = A tiny Python package for easy access to up-to-date Coronavirus (COVID-19, SARS-CoV-2) cases data.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = covid19, coronavirus, api, covid-19, wrapper

url = https://github.com/Kamaropoulos/covid19py

license = GPLv3

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
packages = find:
